# insurance-distributional

./: .gitignore  CHANGELOG.md  README.md  diagnose_phi.py  pyproject.toml  run_neural_gmm_tests.py  run_tests_databricks.py
.github/workflows/: docs.yml
benchmarks/: benchmark.py  benchmark_output_v013.txt  submit_benchmark.py
notebooks/: 01_distributional_gbm_demo.py  02_zero_inflated_tweedie_demo.py  benchmark.py  benchmark_databricks.py  quickstart.ipynb  test_neural_gmm_databricks.py
src/insurance_distributional/: __init__.py  base.py  basis.py  flexcode.py  gamma.py  gar.py  negbinom.py  neural_gmm.py  prediction.py  scoring.py  tweedie.py  zi_tweedie.py  zip.py
tests/: conftest.py  test_base.py  test_basis_extended.py  test_flexcode.py  test_gamma.py  test_gar.py  test_negbinom.py  test_neural_gmm.py  test_p0_regressions.py  test_prediction.py  test_scoring.py  test_scoring_extended.py  test_tw_crps.py  test_tweedie.py  test_zi_tweedie.py  test_zip.py
